2010-1-21 MA Yue <velly.empire@fgmai.com>

    * Add Libreoffice suits

2011-1-20 MA Yue <velly.empire@gmail.com>

    * Improve the function of Editing Repository

2011-1-19 MA Yue <velly.empire@gmail.com>

    * Fix bug 1641 (fail to change avatar)

2011-1-18 MA Yue <velly.empire@gmail.com>

    * Add the ppa for gnome-globalmenu on ubuntu 10.10

2011-1-17 MA Yue <velly.empire@gmail.com>

    * Fix a bug in window titlebar setting
    * Fix the bug 1768(fail to install Acire)

2010-10-31 MA Yue <velly.empire@gmail.com>

    * Correct Bioclipse installation
    * Correct RadioGet installation
    * Fix a bug in ImageChooser
    * Add Brasero
    * Add OpenFetion

2010-10-29 Homer Xing <homer.xing@gmail.com>

	* Dynamic loading setting function. Faster now 

2010-10-23 Homer Xing <homer.xing@gmail.com>

    * Add Fedora repository template
    * Put section name in a separate text entry
    * New feature: remove unused Linux kernel for Fedora

2010-10-15 Homer Xing <homer.xing@gmail.com>

    * Append custom repository. Remove chosen repository.
    * Use radio buttons in clean up pane.

2010-10-10 Homer Xing <homer.xing@gmail.com>

    * Support multiple snapshots in one day

2010-10-09 Homer Xing <homer.xing@gmail.com>

    * Support Fedora repositories editing

2010-10-08 Homer Xing <homer.xing@gmail.com>

	* If user reply "yes" to "no warranty" dialog, do not display that dialog any more.
	* No error message from info pane
	* Hide motherboard vendor if it is empty
	* Clean Nautilus thumbnail image cache in setting pane
	* Use custom window titlebar layout in setting pane
	* Directly display login icon path & "start-here" icon path

2010-10-03 Homer Xing <homer.xing@gmail.com>

    * Fix issue 1026. If source config is wrong, then exit program. Otherwise, "if not package_name in cls.apt_cache" raises exception.
    * Fix issue 1027. No message dialog after icons pack completely downloaded.
    * Fix issue 1089. Dict <-> String have wrong conversation.
