@@ -1,4 +1,9 @@
-2010-1-21 MA Yue <velly.empire@fgmai.com>
+2010-1-23 MA Yue <velly.empire@gmail.com>
+
+    * Firefox configuration
+	* Add Calibre, a e-book management tool
+
+2010-1-21 MA Yue <velly.empire@gmail.com>
 
     * Add Libreoffice suits
 
